--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,14 +33,14 @@
   --color_grey_dark: #a2a2a2;
 }
 
-@media screen and (min-width: 968px) {
+
   :root {
     --big-font-size: 3.5rem;
     --h2-font-size: 2rem;
     --normal-font-size: 1rem;
     --smaller-font-size: .875rem;
   }
-}
+
 
 /*===== BASE =====*/
 *, ::before, ::after {
@@ -84,7 +84,7 @@ img {
   font-size: var(--h2-font-size);
   color: var(--first-color);
   margin-top: var(--mb-2);
-  margin-bottom: var(--mb-4);
+  margin-bottom: var(--mb-6);
   text-align: center;
 }
 
@@ -96,14 +96,15 @@ img {
   left: 0;
   right: 0;
   margin: auto;
-  top: 2rem;
+  top: 3rem;
   background-color: var(--first-color);
 }
 
-.section {
-  padding-top: 3rem;
-  padding-bottom: 2rem;
+section {
+  min-height: 100vh;
+  padding: 4rem;
 }
+
 
 /*===== LAYOUT =====*/
 .bd-grid {
@@ -198,7 +199,6 @@ img {
   position: relative;
   height: 100vh;
   row-gap: 5rem;
-  padding: 4rem 0 5rem;
 }
 
 .home__data {
@@ -236,16 +236,16 @@ img {
 
 .about-container{
   display: flex;
-  height: 620px;
+  min-height: 620px;
   gap: 200px;
 }
 .about-foto{
   width: 50%;
+  
 }
 
 .about-perfil{
   width: 50%;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 50px;
@@ -390,6 +390,7 @@ border:1px solid var(--dark);
 }
 
 /* RESUME */
+
 .resume .resume-title {
   font-size: 26px;
   font-weight: 700;
@@ -466,9 +467,6 @@ border:1px solid var(--dark);
   overflow: hidden;
   z-index: 0;
   margin-top: 5rem;
-}
-.blog-card a {
-  color: inherit;
 }
 
 .blog-card a:hover {
@@ -662,8 +660,9 @@ border:1px solid var(--dark);
   gap: 20px;
 }
 
+
 .btnCode-git{
-  
+  text-decoration: none;
   display: inline-block;
   outline: none;
   cursor: pointer;
@@ -682,7 +681,7 @@ border:1px solid var(--dark);
   }
 
 .btnCode-demo{
-  
+  text-decoration: none;
   display: inline-block;
   outline: none;
   cursor: pointer;
@@ -704,6 +703,11 @@ border:1px solid var(--dark);
 
 
 /* CONTACT */
+
+.contact-address{
+  display: flex;
+  justify-content: center;
+}
 
 #contact address
     {
@@ -739,42 +743,7 @@ border:1px solid var(--dark);
         box-shadow: none;
         margin-bottom: 20px;
     }
-#contact input
-    {
-        height: 50px;
-        padding: 10px;
-    }
-#contact input[type="submit"]
-    {
-        background: #D43F52;
-        border: 2px solid transparent;
-        color: #ffffff;
-        font-weight: bold;
-    }
-#contact input[type="submit"]:hover
-    {
-        background: #ffffff;
-        color: #D43F52;
-        cursor: pointer;
-    }
 
-.contact-form{
-  height: 300px;
-  width: 50%;
-}
-.contact-container{
-  display: flex;
-}
-form{
-  display: flex;
-  flex-direction: column;
-  color: black;
-}
-
-textarea{
-  resize: none;
-  padding: 10px;
-}
 /*BUTTONS*/
 .button {
   display: inline-block;
@@ -794,13 +763,27 @@ textarea{
 
 
 /* ===== MEDIA QUERIES=====*/
-@media screen and (max-width: 320px) {
+@media (max-width: 420px) {
   .home {
     row-gap: 2rem;
   }
-  .home__img {
-    width: 200px;
+  .home h1{
+    font-size: 3rem;
   }
+ 
+}
+
+@media screen and (max-width: 576px) {
+  .home {
+    row-gap: 2rem;
+  }
+ .home__social{
+  flex-direction: row;
+  gap: 20px;
+ }
+ section {
+  padding: 1rem;
+}
 }
 
 @media screen and (min-width: 576px) {
@@ -910,14 +893,29 @@ textarea{
   .home {
     padding: 18rem 0 2rem;
   }
-  .about, .resume, .contact{
-    height: 100vh;
-    padding-top: 5rem;
-  }
+  
   .portfolio{
     padding-top: 5rem;
   }
   .home__img {
     width: 450px;
+  }
+}
+
+@media (max-width: 1050px) {
+  
+  .about-container{
+    flex-direction: column;
+    gap: 50px;
+    align-items: center;
+  }
+  .about-foto{
+    display: flex;
+    width: 80%;
+    min-width: 350px;
+  }
+  .about-perfil{
+    display: flex;
+    width: 100%;
   }
 }
